k8s/00-namespace-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rootenv-infra
spec: {}
status: {}
