k8s/01-namespace-users.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rootenv-users
spec: {}
status: {}
