k8s/21-relay-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: relay
  name: relay
  namespace: rootenv-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relay
  strategy: {}
  template:
    metadata:
      labels:
        app: relay
    spec:
      containers:
      - name: relay
        image: docker.io/library/rootenv-relay
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /healthz 
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
status: {}
