k8s/30-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-svc
  name: backend-svc
  namespace: rootenv-infra
spec:
  ports:
  - name: 8090-8090
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: backend
  type: ClusterIP
status:
  loadBalancer: {}
