k8s/31-relay-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: relay-ssh-svc
  name: relay-ssh-svc
  namespace: rootenv-infra
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: relay-ssh
  type: ClusterIP
status:
  loadBalancer: {}
