k8s/32-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-svc
  name: frontend-svc
  namespace: rootenv-infra
spec:
  ports:
  - name: 5173-5173
    port: 5173
    protocol: TCP
    targetPort: 5173
  selector:
    app: frontend
  type: ClusterIP
status:
  loadBalancer: {}
